tested out results of Google Vision which are working correctly :D